namespace Services.Interface {
    public enum Location {
        FileSystem,
        Server
    }
}